# NanChat

./: .env  .env.exemple  .gitignore  LICENSE  README.md  SECURITY.md  bun.lockb  capacitor.config.ts  index.html  local.properties  package-lock.json  package.json  pnpm-lock.yaml  popup.html  tailwind.config.js  tsconfig.json  version.json  vite.config.ts  vite.config.ts.timestamp-1720457620543-2a5e74684302a.mjs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle  google-services.json
docs/: DEVELOPER.md  USAGE.md
ios/App/: Podfile
public/: browser-toolbar.html  browser-toolbar.js  firebase-messaging-sw.js  manifest.json  manifest.webmanifest
scripts/: bump-version.mjs
src/: i18n.js  ledger.service.ts  manifest.json  options.tsx  popup.tsx  service-worker.js  sw.js
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: browser-remote.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/api-invoke/: Sign.tsx
src/components/: FileManagement.tsx  Forgot.tsx  LedgerContext.tsx  PWAInstallComponent.tsx  Popup.tsx  RefreshButton.tsx  Settings.tsx  Wrapper.tsx  getAccount.tsx  getRepresentative.tsx  getSeed.tsx  tabs.ts  useWallet.tsx
src/hooks/: use-hide-navbar.ts  use-keyboard-open.ts  use-long-press.ts  use-reduce-animation.ts  use-wallet-balance.ts  use-wallet-multi-balance.ts  use-windows-dimensions.ts
src/locales/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  (+8 more)
(+205 files in other folders)
